# model-experiment-and-artifact-management

./: README.md  lefthook.yml  setup.cfg  setup.sh
.github/workflows/: python-ci.yml  static.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
experiment_tracking/: logger.py  mlflow_integration.py
experiment_tracking/utils/: s3_utils.py
src/experiment_tracking/: artifact_manager.py  config.py
tests/: test_logger.py  test_mlflow_integration.py
