[metadata]
name = experiment_tracking
version = 0.0.1
author = David Tsukiyama
description = Mock experiment tracking package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    boto3
    pandas
    mlflow

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    pytest-mock

[options.packages.find]
where = src
exclude = tests*

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = src
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[tox:tox]
envlist = py310,py311
isolated_build = True

[testenv]
deps =
    setuptools
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    setuptools
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:experiment_tracking tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff experiment_tracking tests}

[testenv:lint]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff experiment_tracking tests}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/experiment_tracking/ \
        src/experiment_tracking/*.c \
        src/experiment_tracking/*.so
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/
